--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="header">
             <img src="./images/header-logo.svg" class="logo logo_place_header" alt="карта России">
             <div class="header__lang-links">
-                <a href="#" class="header__lang-link-active">Ru</a>
+                <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
                 <a href="#" class="header__lang-link">En</a>
             </div>
         </header>
@@ -47,7 +47,6 @@
                 </ul>
             </section>
             <section class="photo-grid">
-                <h2 class="photo-grid__noneed">ерунда</h2>
                 <ul class="photo-grid__items">
                     <li> <img src="./images/photo-grid-train.jpg" class="photo-grid__item" alt="вид из окна поезда">
                     </li>
@@ -76,13 +75,13 @@
                         <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
                     </div>
                     <img src="./images/place-kosa.jpg" class="place__image" alt="Коса">
-                    <div class="place__paragraph">
-                        <p class="place__paragraph-paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть
+                    <div class="place__paragraphs">
+                        <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть
                             два водных
                             горизонта
                             — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с
                             другой. Уникальная природная зона на краю российского анклава.</p>
-                        <p class="place__paragraph-paragraph">На этом Калининградская область не заканчивается. Для
+                        <p class="place__paragraph">На этом Калининградская область не заканчивается. Для
                             путешественника и
                             исследователя там же по соседству — самая западная точка России, Балтийская коса, — и
                             немецкое
@@ -99,14 +98,14 @@
                             class="place__link">National Geographic</a>
                     </div>
                     <img src="./images/place-kolsky.jpg" class="place__image" alt="Кольский">
-                    <div class="place__paragraph">
-                        <p class="place__paragraph-paragraph">Почти весь полуостров находится за Полярным кругом.
+                    <div class="place__paragraphs">
+                        <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом.
                             Саамская
                             тундра, от
                             которой
                             на юг —
                             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                        <p class="place__paragraph-paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю
+                        <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю
                             арктического
                             фестиваля
                             в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках
@@ -126,12 +125,12 @@
                             class="place__link">Facebook</a>
                     </div>
                     <img src="./images/place-altai.jpg" class="place__image" alt="Алтай">
-                    <div class="place__paragraph">
-                        <p class="place__paragraph-paragraph">Алтай — одно из красивейших мест в России.
+                    <div class="place__paragraphs">
+                        <p class="place__paragraph">Алтай — одно из красивейших мест в России.
                             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
                             горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
                             чудом здешних мест — горным воздухом.</p>
-                        <p class="place__paragraph-paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего
+                        <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего
                             летом.
                             Так вы
                             увидите
@@ -147,12 +146,12 @@
                         <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
                     </div>
                     <img src="./images/place-winter-baikal.jpg" class="place__image" alt="Зимний Байкал">
-                    <div class="place__paragraph">
-                        <p class="place__paragraph-paragraph">Всем известен Байкал как крупнейшее озеро
+                    <div class="place__paragraphs">
+                        <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
                             в мире. Многие также знают, что это самый большой источник пресной воды и одно из
                             красивейших
                             мест в России.</p>
-                        <p class="place__paragraph-paragraph">Конечно, это всё так. Но Байкал ещё идеальное место
+                        <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место
                             для соревнований по
                             скийорингу. Это такой вид спорта, когда лыжник привязывает себя
                             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019
@@ -167,8 +166,8 @@
                         <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
                     </div>
                     <img src="./images/place-karelia.jpg" class="place__image" alt="Карелия">
-                    <div class="place__paragraph">
-                        <p class="place__paragraph-paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая
+                    <div class="place__paragraphs">
+                        <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая
                             тайгу
                             сибирская
                             лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса
